# exercism-tasks

./: Cargo.toml
acronym/src/: lib.rs
acronym/tests/: acronym.rs
all-your-base/: README.md
all-your-base/src/: lib.rs
allergies/src/: lib.rs
allergies/tests/: allergies.rs
alphametics/src/: lib.rs
alphametics/tests/: alphametics.rs
anagram/src/: lib.rs
anagram/tests/: anagram.rs
atbash-cipher/src/: lib.rs
atbash-cipher/tests/: atbash-cipher.rs
beer-song/: README.md
beer-song/src/: lib.rs
beer-song/tests/: beer-song.rs
bob/: README.md
bob/src/: lib.rs
bowling/src/: lib.rs
bowling/tests/: bowling.rs
bracket-push/src/: lib.rs
bracket-push/tests/: bracket-push.rs
custom-set/src/: lib.rs
difference-of-squares/: README.md
difference-of-squares/src/: lib.rs
dominoes/src/: lib.rs
etl/: README.md
etl/src/: lib.rs
forth/: .README.md.swp
forth/src/: lib.rs
forth/tests/: .forth.rs.swp  forth.rs
gigasecond/: README.md
gigasecond/tests/: gigasecond.rs
grade-school/src/: lib.rs
grains/src/: lib.rs
hamming/: README.md
hamming/src/: lib.rs
hamming/tests/: hamming.rs
hello-world/src/: lib.rs
largest-series-product/src/: lib.rs
leap/: README.md
leap/src/: lib.rs
luhn-from/src/: lib.rs
luhn-from/tests/: luhn-from.rs
luhn-trait/src/: lib.rs
luhn/src/: lib.rs
nucleotide-codons/: Cargo.toml
nucleotide-count/: README.md
pangram/: README.md
protein-translation/: Cargo.toml
raindrops/: README.md
roman-numerals/: README.md
scrabble-score/: README.md
sieve/: README.md
word-count/: README.md
(+45 files in other folders)
