[package]
name = "rust"
version = "0.1.0"
authors = ["Henning-K <henning.kowalk962@web.de>"]

[workspace]
members = ["acronym", "allergies", "all-your-base", "alphametics", "anagram", "atbash-cipher", "beer-song", "bob", "bowling", "bracket-push", "custom-set", "difference-of-squares", "etl", "gigasecond", "grade-school",
    "grains", "hamming", "hello-world", "largest-series-product", "leap", "luhn", "nucleotide-count", "pangram", "pascals-triangle", "phone-number", "queen-attack", "raindrops",
    "rna-transcription", "robot-simulator", "roman-numerals", "scrabble-score", "sieve", "space-age", "sublist", "sum-of-multiples", "tournament", "triangle", "variable-length-quantity",
    "word-count", "wordy"]